--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>star wars</title>
-	<link rel="stylesheet" href="css/styles.css">
-	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-
+  <meta charset="UTF-8">
+  <title>True Love</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed" rel="stylesheet">
 </head>
 <body>
-	<h1>Star Wars Tinder</h1>
-	<div class="info-container">
-
-		<p id="name"></p>
-		<p id="height"></p>
-		<p id="mass"></p>
-		<p id="dob"></p>
-	</div>
-	<button id="button">Find Your True Love</button>
-	
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.min.js"></script>
-	<script src="js/app.js"></script>
+ <header id="top">
+   <img src="https://seeklogo.com/images/S/Star_Wars-logo-2B2C24F703-seeklogo.com.png" alt="">
+   <h1>Tinder</h1>
+ </header>
+ <div id="loveInfo">
+   <div id="fullName"></div>
+   <div id="gender"></div>
+   <div id="height"></div>
+   <div id="weight"></div>
+   <div id="hair"></div>
+   <div id="eye"></div>
+   <div id="birth"></div>
+ </div>
+<div id="buttonWrap">
+<button id="findLove">Find Love That is Truly Out of This World</button>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.min.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
